<resources>
    <string name="app_name">AndroidPokerClient2</string>
    <string name="new_hand_button">New hand</string>
    <string name="saved_hands_button">Saved Hands</string>
    <string name="settings_button">Settings</string>
    <string name="log_out_button">Log out</string>
    <string name="select_date_button">Select a Date</string>
    <string name="hero_hand">Hero Hand</string>
    <string name="card1">Card1</string>
    <string name="card2">Card2</string>
    <string name="edit_players_button">Edit Players</string>
    <string name="next_button">Next</string>
    <string name="save_players_button">Save players</string>
    <string name="flop_cards_textview">The flop</string>
    <string name="community_card">Card</string>
    <string name="card_hint">Card (VALUE,suit)</string>
    <string name="river_textview">River</string>
    <string name="save_hand_button">Save hand</string>
    <string name="player">Player</string>
    <string name="main_menu_button">Main menu</string>
    <string name="savedhands_textview">Saved hands</string>
    <string name="settings_textview">Settings</string>
    <string name="bet">Bet</string>
    <string name="new_action_button">+</string>

    <string-array name="player_amount">
        <item>2 players</item>
        <item>3 players</item>
        <item>4 players</item>
        <item>5 players</item>
        <item>6 players</item>
        <item>7 players</item>
        <item>8 players</item>
        <item>9 players</item>
        <item>10 players</item>
    </string-array>







</resources>
